--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -9,7 +9,7 @@
 {% else %}
 	<img src="{{ site.url }}/images/{{ author.avatar }}" class="bio-photo" alt="{{ author.name }} bio photo">
 {% endif %}
-
+<iframe src="https://www.cloudcredibility.com/profile/widget/11317" width="300" height="270" scrolling="no"></iframe> 
   <h3 itemprop="name">{{ author.name }}</h3>
   <p>{{ author.bio }}</p>
   {% if author.email %}<a href="mailto:{{ author.email }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
